# my_package

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  CITATION.cff  LICENSE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: Def-codeql.yml  codeql.yml  pre-commit.yml  python-app.yml
docs/: conf.py  index.rst  make_docs.sh  requirements.in
docs/_templates/: README.md
my-package/: __init__.py
my_package/: __init__.py
scripts/: personalize.sh
tests/: __init__.py  test_example.py
