# Refer to: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# For pytest: https://docs.pytest.org/en/stable/reference/customize.html
[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "my_package"
description="My Awesome New Package"
authors = [
    {name = "Nathan A. Mahynski", email = "nathan.mahynski@gmail.com"}
]
maintainers = [
    {name = "Nathan A. Mahynski", email = "nathan.mahynski@gmail.com"}
]
keywords = []
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
readme = "README.md"
# Replace with an SPDX expression (e.g. license = "MIT") once LICENSE.md
# is populated. See PEP 639.
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.9.0",
    "numpy>=1.26.4",
    "pandas>=2.1.4",
    "scikit-learn>=1.7.2",
    "scipy>=1.13.1",
    "seaborn>=0.13.0",
    "tqdm>=4.66.1",
    "watermark>=2.4.3",
    "missingno>=0.5.2",
    "wandb>=0.17.5",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov",
]
docs = [
    "sphinx",
    "sphinx-book-theme>=1.0.1",
    "readthedocs-sphinx-search>=0.3.2",
    "nbsphinx>=0.9.2",
    "sphinx_gallery>=0.14.0",
]
notebook = [
    "IPython",
    "ipywidgets",
    "ipykernel",
]
dev = [
    "my_package[test,docs,notebook]",
    "pre-commit>=3.3.3",
    "mypy",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["my_package"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.setuptools.packages.find]
where = ["."]
include = ["my_package*"]

[tool.setuptools.dynamic]
version = {attr = "my_package.__version__"}

[project.urls]
Repository = "https://github.com/mahynski/my_package.git"
Documentation = "https://my_package.readthedocs.io/"
Issues = "https://github.com/mahynski/my_package/issues"
